wp added fb auth

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -7,4 +7,6 @@
       = link_to 'Logout', signout_path
   - else
     %li
-      = link_to 'Login', signin_path
+      = link_to 'Tw', twitter_signin_path
+      |
+      = link_to 'Fb', facebook_signin_path
