--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -3,4 +3,4 @@
   - @users.each do |user|
     %li
       = link_to user.name, user
-      signed up #{user.created_at.to_date}
+      signed up #{user.created_at.to_date if user.created_at}
