--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,3 +5,5 @@
   Email: #{@user.email if @user.email}
 %p
   (since): #{@user.created_at.to_date if @user.created_at}
+%div
+  =link_to 'edit', edit_user_path
